...
        jsonData['ThemeColor']);
    final arr = jsonData['Name'].toString().split(' ');
    firstName = arr[0];
    lastName = arr.length > 1 ? arr[1] : "";
    id = jsonData['Id'].toString();
    idController.text = id;
    name = jsonData['Name'].toString();
    nameController.text = name;
    email = jsonData['Email'].toString();
    emailController.text = email;
    password = jsonData['Password'].toString();
    passwordController.text = password;
    address = jsonData['Address'].toString();
...
                      'assets/images/icons/telephone.png',
                      scale: 1.0,
                      height: 50,
                      width: 50,
                    ),
                    title: TextFormField(
                      key: const Key('number'),
                      decoration: const InputDecoration(
                        border: InputBorder.none,
                      ),
                      controller: phoneNumberController,
                      readOnly: !editProfile,
                      style: const TextStyle(
...
                        borderRadius: BorderRadius.circular(15)),
                    child: Container(
                      width: 200,
                      height: 50,
                      alignment: Alignment.center,
                      child: const Text(
                        'Save',
                        style: TextStyle(
                            fontSize: 18,
                            fontFamily: 'Montserrat',
                            fontWeight: FontWeight.w700),
                      ),
                    ),
...
                        borderRadius: BorderRadius.circular(15)),
                    child: Container(
                      width: 200,
                      height: 50,
                      alignment: Alignment.center,
                      child: const Text(
                        'Edit Profile',
                        style: TextStyle(
                            fontSize: 18,
                            fontFamily: 'Montserrat',
                            fontWeight: FontWeight.w700),
                      ),
                    ),
...
              child: Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  Padding(
                    padding: const EdgeInsets.only(left: 3, right: 3),
                    child: ElevatedButton(
                        key: const Key("blueTheme"),
                        onPressed: () {
                          themeColor = 0;
                          blueSelected = true;
                          pinkSelected = false;
                          greenSelected = false;
                          orangeSelected = false;
...
                          ),
                          backgroundColor: MyColors.buttonColorsGradiant1,
                        ),
                        child: null),
                  ),
                  ElevatedButton(
                      key: const Key("pinkTheme"),
                      onPressed: () {
                        getProfileInfo(httpClient);
                        themeColor = 1;
                        blueSelected = false;
                        pinkSelected = true;
                        greenSelected = false;
...
                        backgroundColor: MyColors.buttonColorsGradient3,
                      ),
                      child: null),
                  Padding(
                    padding: const EdgeInsets.only(left: 3, right: 3),
                    child: ElevatedButton(
                        key: const Key("greenTheme"),
                        onPressed: () {
                          themeColor = 2;
                          blueSelected = false;
                          pinkSelected = false;
                          greenSelected = true;
                          orangeSelected = false;
...
                          ),
                          backgroundColor: MyColors.buttonColorsGradient5,
                        ),
                        child: null),
                  ),
                  ElevatedButton(
                      key: const Key("orangeTheme"),
                      onPressed: () {
                        themeColor = 3;
                        blueSelected = false;
                        pinkSelected = false;
                        greenSelected = false;
                        orangeSelected = true;
...
